fix overflow lateral *estilos.css *index.html

--- a/estilos.css
+++ b/estilos.css
@@ -10,9 +10,11 @@
 }
 html{
 	scroll-behavior: smooth;
+	width: 100%;
 }
 body{
-	padding-top: 6em;
+	width: 100%;
+	overflow-x: hidden;
 	color: white;
 	min-height: 100vh;
 	background: #0c192c;
@@ -20,7 +22,6 @@ body{
 h1{
 	font-size: 2em;
 }
-
 h2{
 	font-size: 2rem;
 	margin-top: 5em;
@@ -43,7 +44,6 @@ h4{
 	position: relative;
 	display: flex;
 }
-
 .bubbles span{
 	position: relative;
 	padding: 0.5em;
@@ -56,7 +56,6 @@ h4{
 	animation:  animate 15s linear infinite;
 	animation-duration: calc(125s / var(--i));
 }
-
 .bubbles span:nth-child(even){
 	background: #ff2d75;
 	box-shadow: 0 0 0 10px #ff2d7544,
@@ -90,7 +89,6 @@ nav{
 	position: relative;
 
 }
-
 .btnHeader::after{
 	content: "";
 	height: 2px;
@@ -139,7 +137,7 @@ ul{
 	right: 1em;
 	top: 3em;
 	height: 1em;
-	width: 6em;
+	width: 6.5em;
 	transition: height 0.7s ease-in-out;
 	flex-direction: column;
 	align-items: center;
@@ -231,10 +229,10 @@ ul{
 	box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)
 
 }
-.hability:hover{
+/*.hability:hover{
 	transform: scale(1.1);
 
-}
+}*/
 .hability-img{
 	width: 3em;
 	height: auto;
